# CUDA-120-DAYS--CHALLENGE

daily-updates/: day-105-HPC--Memory-Throughput-&-Computation.md  day-106-HPC--Precision-&-Mixed-Precision.md  day-4-Thread-Hierarchy--Grids-&-Blocks.md  day-5-Thread-Hierarchy--Warps-(Intro).md  day-54-Nsight-Compute--Kernel-Analysis.md  day-72-CUDA-Graphs--Complex-Workflows.md  day-78-Large-Scale-Projects--Modular-Kernel-Design.md  day-81-Cooperative-Groups--Advanced-Patterns.md
my-cuda-project/: CMakeLists.txt  Makefile  cpu.exp  cpu.lib  cuda_app.exp  cuda_app.lib  gpu.exp  gpu.lib  matmul.exp  matmul.lib  nvcc-build.cmd  vectoradd.exp  vectoradd.lib
my-cuda-project/include/: kernels.h
my-cuda-project/src/: kernels.cu  main.cu  main_cpu.c  main_gpu.cu  matmul.cu  vectorp.cu
src/: helloGPU.cu  helloGPU.exp  helloGPU.lib
